# axiom-profiler-2

./: .gitattributes  .gitignore  .lfsconfig  Cargo.toml  README.md  diff_theirs.ipynb  gen_reports.py  parser_ours.py  parser_theirs.py  rust-toolchain.toml
axiom-profiler-GUI/: .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  style.css
axiom-profiler-GUI/assets/: logo.psd  logo_side.psd  logo_tmp.psd
axiom-profiler-GUI/assets/html/: perfetto.css  style.css
axiom-profiler-GUI/js/: graph_layout.js
axiom-profiler-GUI/src/: attribute_fetcher.rs  commands.rs  configuration.rs  edges.rs  example.rs  file.rs  filter_chain.rs  global_callbacks.rs  graph.rs  graph_container.rs  graph_filter.rs  graph_filters.rs  graph_layout.rs  graph_state.rs  graph_struct.rs  homepage.rs  input_state.rs  lib.rs  main.rs  nodes.rs  selected_node.rs  shortcuts.rs  svg_graph.rs  svg_result.rs  svg_result_struct.rs  toggle_switch.rs  weak_component_link.rs  worker.rs
axiom-profiler-GUI/src/configuration/: data.rs  mod.rs  page.rs  provider.rs  term_display.rs
axiom-profiler-GUI/src/filters/: add_filter.rs  manage_filter.rs  mod.rs
axiom-profiler-GUI/src/infobars/: history.rs  mod.rs  sidebar.rs  topbar.rs
axiom-profiler-GUI/src/infobars/dropdown/: button.rs  container.rs  list.rs  mod.rs
axiom-profiler-GUI/src/infobars/ml_omnibox/: input.rs  mod.rs
axiom-profiler-GUI/src/infobars/omnibox/: commands.rs  input.rs  mod.rs  mode.rs  search.rs  view.rs
axiom-profiler-GUI/src/results/: filters.rs  graph_info.rs  graphviz.rs  insts_info.rs  insts_info_struct.rs  mod.rs  node_info.rs  render_warning.rs  svg_result.rs  worker.rs
axiom-profiler-GUI/src/results/filters/: filter_chain.rs  graph_filters.rs  mod.rs  node_actions.rs  selected_node.rs
axiom-profiler-GUI/src/results/graph/: graph.rs  graph_container.rs  mod.rs  svg_graph.rs
axiom-profiler-GUI/src/screen/: extra.rs  graphviz.rs  manager.rs  maybe_rc.rs  mod.rs  screen.rs.template
axiom-profiler-GUI/src/screen/file/: analysis.rs  mod.rs  quant_graph.rs  summary.rs
axiom-profiler-GUI/src/screen/homepage/: example.rs  file.rs  mod.rs  screen.rs
axiom-profiler-GUI/src/screen/inst_graph/: dimensions.rs  mod.rs  mode.rs  search.rs  visible.rs
axiom-profiler-GUI/src/screen/ml/: data.rs  loaded.rs  mod.rs  render.rs
axiom-profiler-GUI/src/sidebar/: mod.rs
axiom-profiler-GUI/src/state/: mod.rs
axiom-profiler-GUI/src/utils/: colouring.rs  display_byte.rs  graphviz.rs  indexer.rs  input_state.rs  lookup.rs  mod.rs  overlay_page.rs  position.rs  select_dropdown.rs  split_div.rs  svg.rs  tab.rs  toggle_list.rs  updater.rs  usize_input.rs
smt-log-parser/: .gitignore  Cargo.toml  README.md
smt-log-parser/design-docs/: profiling.md
smt-log-parser/src/: css.rs  display_with.rs  dot_output.rs  error.rs  file_io.rs  interrupter.rs  items.rs  lib.rs  main.rs  parsers.rs  render.rs  util.rs
smt-log-parser/src/analysis/: cdcl.rs  dependencies.rs  generalise.rs  misc.rs  mod.rs  proofs.rs
smt-log-parser/src/analysis/graph/: disable.rs  generalise.rs  hide.rs  inst_graph.rs  mod.rs  raw.rs  subgraph.rs  visible.rs
smt-log-parser/src/cmd/: args.rs  dependencies.rs  mod.rs  reconstruct.rs  stats.rs  test.rs
smt-log-parser/src/formatter/: defns.rs  defns_const.rs  deparse.rs  error.rs  mod.rs  parse.rs  serde.rs
smt-log-parser/src/items/: cdcl.rs  enode.rs  equality.rs  idx.rs  inst.rs  instantiation.rs  meaning.rs  mod.rs  proof.rs  quant.rs  stack.rs  term.rs
smt-log-parser/src/mem_dbg/: impl.rs  mod.rs  utils.rs
smt-log-parser/src/parsers/: mod.rs  z3parser1.rs  z3parser_rc.rs
smt-log-parser/tests/: parse_logs.rs
(+152 files in other folders)
