[package]
name = "yew-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"]}
gloo = "0.9.0"
web-sys = "0.3.57"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-file = "0.2.3"
js-sys = "0.3.64"
gloo-net = "0.3.1"
serde = "1.0.180"
wasm-bindgen-futures = "0.4.37"
yew-router = "0.17.0"
scraper = "0.17.1"
getrandom = { version = "0.2", features = ["js"] }
