[package]
name = "yew-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"]}
gloo = "0.9.0"
web-sys = {version="0.3.57", features=["DomTokenList","Element"]}
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-file = "0.2.3"
js-sys = "0.3.64"
gloo-net = "0.3.1"
serde = {version="1.0.180", features=["derive"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
yew-router = "0.17.0"
scraper = "0.17.1"
getrandom = { version = "0.2", features = ["js"] }
prototype = { path = "../smt-log-parser" }
petgraph = {version="0.6.4", features=["serde-1"]}
viz-js = "3.1.0"
gloo-utils = {version="0.2.0", features=["serde"]}
serde_json = "1.0.107"
wasm-bindgen-file-reader = "1.0.0"
