[package]
name = "yew-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"]}
gloo = "0.9.0"
web-sys = {version="0.3.65", features=["DomTokenList","Element","Node"]}
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-file = "0.2.3"
js-sys = "0.3.65"
gloo-net = "0.3.1"
serde = "1.0.180"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
yew-router = "0.17.0"
scraper = "0.17.1"
getrandom = { version = "0.2", features = ["js"] }
smt-log-parser = { path = "../smt-log-parser" }
petgraph = "0.6.4"
viz-js = "3.1.0"
wasm-streams = "0.3.0"
yew-hooks = "0.3.0"
