[package]
name = "smt-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
futures = "0.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
petgraph = "0.6.4"
implicit-clone = "0.4.1"
wasm-timer = "0.2"
