[package]
name = "smt-log-parser"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0.183", features = ["derive"], optional = true }
petgraph = "0.6.4"
wasm-timer = "0.2"
semver = "1.0"
typed-index-collections = { version = "3.1", features = ["serde"] }
fxhash = "0.2"
duplicate = "1.0"
gloo-console = "0.3.0"
roaring = "0.10"
lasso = { version = "0.7", features = ["serialize"] }
mem_dbg = { version = "0.1.8", features = ["std", "derive"], default-features = false, optional = true }

[dev-dependencies]
memory-stats = "1.1.0"
cap = "0.1.2"
smt-log-parser = { path = ".", features = ["mem_dbg"] }

[features]
default = ["display"]
display = []
# Tries to catch memory allocation errors, in some cases spends some extra time with test allocations
# when a crate doesn't support `try_reserve`. Currently some panics may still happen.
never_panic = []
mem_dbg = ["dep:mem_dbg"]
serde = ["dep:serde"]
